# BERTree

./: CMakeLists.txt  README.md  main.c  tmp.txt
Base/include/: base.h
Base/src/: CMakeLists.txt  base.c
IndefiniteArray/include/: IndefiniteArray.h  indefiniteArray.h
IndefiniteArray/src/: CMakeLists.txt  IndefiniteArray.c  indefiniteArray.c
Interface/include/: interface.h
Interface/src/: CMakeLists.txt  interface.c
MBTree/include/: node.h  tree.h
MBTree/src/: CMakeLists.txt  node.c  tree.c
Test/: CMakeLists.txt  test.c
